# DobotInterface

./: index.html  package-lock.json  package.json
cobot_controladores/: CMakeLists.txt  Tutorial para instalar nodejs y bajar repositorio.txt  chat  cobot.urdf.xacro  joint_limits.yaml  joint_limits13-10.yaml  kinematics.yaml  msj ros
cobot_controladores/launch/: ini_rob_colaborativo.launch  inicializacion_encendido.launch  preubaInicio2.launch  preubaInicio4.launch  preubaInicio5.launch  preubaInicio7.launch  preubaInicio8.launch  preubaInicio9.launch
cobot_controladores/msg/: MatrizDy.msg  msg_estados.msg  msg_web.msg  punto_correr.msg  punto_web.msg  trayectorias.msg  waits.msg
cobot_controladores/src/: Conversion_Robot.py  Manejo_Coordenadas.py  Normalizacion_Robot.py  Prueba_de_funcionamiento.py  RUTINA.py  action_server_ejec_trayectoria4.py  cinematica.py  controlador_rutina_prueba2.py  controlador_rutina_prueba3.py  controlador_rutina_prueba4.py  controlador_rutina_prueba5.py  controlador_rutina_prueba6.py  coordenadas.json  db_puntos3.py  db_puntos4.py  db_puntos5.py  db_puntos6.py  inicializacion_encendido.py  inicializacion_encendido2.py  modo_lectura12.py  modo_lectura13.py  modo_lectura14.py  modo_lectura15.py  modo_lectura16.py  modo_lectura17.py  modo_lectura17_ang.py  modo_lectura18.py  publicacion_posicion_real.py  publicacion_posicion_real2.py  publicacion_posicion_real3.py  trayectoria32.py  trayectoria34.py  trayectoria35.py  trayectoria36.py  trayectoria36_ang.py  trayectoria37.py  trayectoria38.py  trayectoria39.py  trayectoria40.py
(+200 files in other folders)
